--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.2",
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-navigation/bottom-tabs": "^6.5.4",
+    "@react-navigation/native": "^6.1.3",
+    "@react-navigation/native-stack": "^6.9.9",
     "expo": "~47.0.12",
+    "expo-app-loading": "~2.1.1",
+    "expo-font": "~11.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
-    "@react-navigation/bottom-tabs": "^6.5.4",
-    "@react-navigation/native": "^6.1.3",
-    "@react-navigation/native-stack": "^6.9.9",
-    "@react-native-async-storage/async-storage": "~1.17.3"
+    "react-native-screens": "~3.18.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
