--- a/app.json
+++ b/app.json
@@ -1,29 +1,27 @@
 {
   "expo": {
-    "name": "FoodLumz",
-    "slug": "FoodLumz",
+    "name": "FoodLums",
+    "slug": "FoodLums",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./src/imgs/spalsh-img.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#D3D3D3"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
+        "foregroundImage": "./src/imgs/spalsh-img.png",
+        "backgroundColor": "#D3D3D3"
       }
     },
     "web": {
